tests/errors/2009-6.vb
'#compiler-options:/vbruntime+:
'#compiler-message:Command line error BC2009 : option 'vbruntime' can be followed only by '+' or '-'
'#exit-code:1